# wg-ragsmith

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: semantic_chunking_plan.md
examples/: query_chunks.rs  query_db.sh  rust_book_pipeline.rs
src/: lib.rs  types.rs
src/ingestion/: cache.rs  chunk.rs  mod.rs  resume.rs
src/nodes/: chunking.rs  mod.rs
src/semantic_chunking/: assembly.rs  breakpoints.rs  cache.rs  config.rs  embeddings.rs  json.rs  mod.rs  segmenter.rs  service.rs  tests.rs  tokenizer.rs  types.rs
src/semantic_chunking/html/: grouper.rs  mod.rs  preprocess.rs
src/stores/: mod.rs  sqlite.rs
tests/: integration_mock_embeddings.rs
tests/semantic_chunking/html/: example_article.html  example_table.html
tests/semantic_chunking/json/: example_metrics.json  example_nested.json
