[package]
name = "wg-ragsmith"
version = "0.1.5"
edition = "2024"
description = "Semantic chunking and RAG utilities for document processing and retrieval-augmented generation."
license = "MIT"
repository = "https://github.com/Idleness76/wg-ragsmith"
homepage = "https://github.com/Idleness76/wg-ragsmith"
documentation = "https://docs.rs/wg-ragsmith"
keywords = ["rag", "semantic-chunking", "nlp", "chunking", "vector-search"]
categories = [
    "algorithms",
    "data-structures",
    "text-processing",
    "api-bindings",
]
rust-version = "1.89"
readme = "README.md"

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
] }
tracing = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "rustls",
] }
url = "2"
rig-core = { version = "0.30", features = ["derive"] }
rig-sqlite = "=0.1.33"
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
sqlite-vec = "0.1"
regex = "1"
scraper = "0.25"
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4", "serde"] }
segtok = { version = "0.1", optional = true }
tiktoken-rs = { version = "0.9", optional = true }
rust-bert = { version = "0.23", default-features = false, optional = true }

# Weavegraph integration (optional)
weavegraph = { version = "0.2", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
httpmock = "0.8"
tempfile = "3"

[features]
default = ["semantic-chunking-tiktoken"]
semantic-chunking-tiktoken = ["tiktoken-rs"]
semantic-chunking-rust-bert = ["rust-bert"]
semantic-chunking-segtok = ["segtok"]
# Weavegraph integration: provides Node implementations for use in workflow graphs
weavegraph-nodes = ["weavegraph"]

[lib]
path = "src/lib.rs"

[package.metadata.cargo-machete]
ignored = ["httpmock", "rig-core", "rust-bert", "unicode-segmentation"]
